Typescript Counter-ImageGallery-Locations-VoiceDetection Complated

--- a/mainStyle.css
+++ b/mainStyle.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
-
+*{
+    margin: 0;
+    box-sizing: border-box;
+    padding: 0;
+}
 
 body{
     background-color: #0e0f1d;
@@ -17,6 +21,7 @@ a{
     width: 100%;
     max-width: 75rem;
     margin: 0 auto;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,6 +36,20 @@ a{
     gap: 3rem;
     width: 100%;
     margin-top: 3rem;
+}
+
+@media screen and (max-width: 600px) {
+
+    .container{
+        align-items: start;
+        justify-content: start;
+    }
+
+    .projects{
+        flex-direction: column;
+        width: 100%;
+    }
+
 }
 
 .projects .projectsBlock{
